Kubernetes/php/blood-bank-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: php-nodeport-svc
  labels:
    app: php 
    app.kubernetes.io/name: php 
spec: 
  type: NodePort 
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: php
  sessionAffinity: ClientIP 
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata: 
  name: blood-bank-frontend 
  labels: 
    app: php 
    app.kubernetes.io/name: php
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: { duration: 10s }
      - setWeight: 60
      - pause: { duration: 20s }
      - setWeight: 80
      - pause: { duration: 40s}
  selector: 
    matchLabels:
      app: php 
  template: 
    metadata:
      labels:
        app: php
        app.kubernetes.io/name: php 
    spec:
      containers:
      - name: blood-bank-frontend
        image: soravkumarsharma/blood-bank-frontend:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
