Kubernetes/php/service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-clusterip-svc
  labels:
    app: php 
    app.kubernetes.io/name: php
spec: 
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: php
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10
