Kubernetes/php/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blood-bank-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: blood-bank-alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:898855110204:certificate/e0716631-537a-4504-aecc-d868c2b5ccb4 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
  labels:
    app: php
spec:
  ingressClassName: alb
  rules:
    - host: bloodbank.soravkumarsharma.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-clusterip-svc
                port:
                  number: 80
